IC-Test/objects/F2S_CPP_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date the Snapshot record is for</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <label>CPP Role ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Lbs__c</fullName>
        <label>Total Annual Lbs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>CPP User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>F2S CPP Snapshot</label>
    <nameField>
        <label>F2S CPP Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F2S CPP Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>